Sat Dec  6 03:17:49 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* keditcl1.cpp: implemented control-k control-y emacs like kill buffer
	  threw out KEdit.cpp KEdit.h and introduced keditcl.h keditcl1.cpp
	  keditcl2.cpp

Fri Oct 24 01:19:54 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kedit.cpp: lots of clean ups and fixes that were necessary because
	  of Qt 1.31. I replaced at message and query dialogs with the new 
	  warning and information dialogs. 

Thu Sep 25 22:37:22 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* non-modal search and replace dialogs
	* centered about, search and replace dialogs
	* bug fixes

Sat Aug 30 23:27:51 1997  Teilnehmer 8  <wuebben@kray.dinet.de (Teilnehmer 8)>

	* added Klocale support

Mon Aug  4 19:23:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* Better about box with logo ( code from kreversi )

Sat Aug  2 22:55:53 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* KEdit.cpp: various fixes
	* kedit.cpp  fixed the 'malformed URL' bug that popped up
	  since KURL had changed its behaviour

Thu Jul 24 20:13:53 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kedit.cpp: made kedit work with the new libs

Mon Jul 21 22:43:07 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kedit.cpp: implemented mailing

Sun Jul 20 16:59:27 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* KEdit.cpp: Fixed permissions bug
	             Change line and column numbering to start at 1 
		     instead of 0

Mon Jun 16 18:33:56 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kedit.cpp: files dropped onto kedit are now opened with read and 
	             write permissions.

Thu May 22 15:02:23 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* KEdit.cpp: the file open dialogs will now remember the last
	             directory visited.
