@@ -1,12 +1,34 @@
-#include "filldlg.h"
+    /*
 
+    $Id$
+
+    Copyright (C) 1997 Bernd Johannes Wuebben   
+                       wuebben@math.cornell.edu
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+
+    */
+
+#include "filldlg.h"
 #include <klocale.h>
 #include <kapp.h>
 
 FillDlg::FillDlg(QWidget *parent, const char *name)
      : QDialog(parent, name, TRUE)
 {
-    frame1 = new QGroupBox(klocale->translate("Miscellaneous Options"), 
+    frame1 = new QGroupBox(klocale->translate("KEdit Options"), 
 			   this, "frame1");
     values = new QLineEdit( this, "values");
     this->setFocusPolicy(QWidget::StrongFocus);
