@@ -24,8 +24,6 @@
   along with this program; if not, write to the Free Software
   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
   
-  KEdit, simple editor class, hacked version of the original by 
-  Nov 96, Alexander Sanda <alex@darkstar.ping.at>
  
   */
 
