@@ -2,15 +2,8 @@
 
     $Id$
 
-    Requires the Qt widget libraries, available at no cost at 
-    http://www.troll.no
-       
     Copyright (C) 1997 Bernd Johannes Wuebben   
                        wuebben@math.cornell.edu
-
-    Parts:             
-    Copyright (C) 1996 Alexander Sanda
-                       alex@darkstar.ping.at
     
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
